components/script/xpath/snapshots/script__xpath__parser__tests__complex_paths@div_or_span.snap
---
source: components/script/xpath/parser.rs
description: "//*[self::div or self::span][@class]"
expression: output
snapshot_kind: text
---
Path(
    PathExpr {
        is_absolute: true,
        is_descendant: true,
        steps: [
            Axis(
                AxisStep {
                    axis: Child,
                    node_test: Wildcard,
                    predicates: PredicateListExpr {
                        predicates: [
                            PredicateExpr {
                                expr: Or(
                                    Path(
                                        PathExpr {
                                            is_absolute: false,
                                            is_descendant: false,
                                            steps: [
                                                Axis(
                                                    AxisStep {
                                                        axis: Self_,
                                                        node_test: Name(
                                                            QName {
                                                                prefix: None,
                                                                local_part: "div",
                                                            },
                                                        ),
                                                        predicates: PredicateListExpr {
                                                            predicates: [],
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    Path(
                                        PathExpr {
                                            is_absolute: false,
                                            is_descendant: false,
                                            steps: [
                                                Axis(
                                                    AxisStep {
                                                        axis: Self_,
                                                        node_test: Name(
                                                            QName {
                                                                prefix: None,
                                                                local_part: "span",
                                                            },
                                                        ),
                                                        predicates: PredicateListExpr {
                                                            predicates: [],
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            },
                            PredicateExpr {
                                expr: Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Axis(
                                                AxisStep {
                                                    axis: Attribute,
                                                    node_test: Name(
                                                        QName {
                                                            prefix: None,
                                                            local_part: "class",
                                                        },
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        ],
    },
)
