components/script/xpath/snapshots/script__xpath__parser__tests__complex_paths@following_sibling.snap
---
source: components/script/xpath/parser.rs
description: "ancestor::*[1]/following-sibling::div[1]"
expression: output
snapshot_kind: text
---
Path(
    PathExpr {
        is_absolute: false,
        is_descendant: false,
        steps: [
            Axis(
                AxisStep {
                    axis: Ancestor,
                    node_test: Wildcard,
                    predicates: PredicateListExpr {
                        predicates: [
                            PredicateExpr {
                                expr: Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Filter(
                                                FilterExpr {
                                                    primary: Literal(
                                                        Numeric(
                                                            Integer(
                                                                1,
                                                            ),
                                                        ),
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
            Axis(
                AxisStep {
                    axis: FollowingSibling,
                    node_test: Name(
                        QName {
                            prefix: None,
                            local_part: "div",
                        },
                    ),
                    predicates: PredicateListExpr {
                        predicates: [
                            PredicateExpr {
                                expr: Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Filter(
                                                FilterExpr {
                                                    primary: Literal(
                                                        Numeric(
                                                            Integer(
                                                                1,
                                                            ),
                                                        ),
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        ],
    },
)
