components/script/xpath/snapshots/script__xpath__parser__tests__complex_paths@position_last.snap
---
source: components/script/xpath/parser.rs
description: "//div[position() > 1]/*[last()]"
expression: output
snapshot_kind: text
---
Path(
    PathExpr {
        is_absolute: true,
        is_descendant: true,
        steps: [
            Axis(
                AxisStep {
                    axis: Child,
                    node_test: Name(
                        QName {
                            prefix: None,
                            local_part: "div",
                        },
                    ),
                    predicates: PredicateListExpr {
                        predicates: [
                            PredicateExpr {
                                expr: Relational(
                                    Path(
                                        PathExpr {
                                            is_absolute: false,
                                            is_descendant: false,
                                            steps: [
                                                Filter(
                                                    FilterExpr {
                                                        primary: Function(
                                                            Position,
                                                        ),
                                                        predicates: PredicateListExpr {
                                                            predicates: [],
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    Gt,
                                    Path(
                                        PathExpr {
                                            is_absolute: false,
                                            is_descendant: false,
                                            steps: [
                                                Filter(
                                                    FilterExpr {
                                                        primary: Literal(
                                                            Numeric(
                                                                Integer(
                                                                    1,
                                                                ),
                                                            ),
                                                        ),
                                                        predicates: PredicateListExpr {
                                                            predicates: [],
                                                        },
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                },
            ),
            Axis(
                AxisStep {
                    axis: Child,
                    node_test: Wildcard,
                    predicates: PredicateListExpr {
                        predicates: [
                            PredicateExpr {
                                expr: Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Filter(
                                                FilterExpr {
                                                    primary: Function(
                                                        Last,
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            },
                        ],
                    },
                },
            ),
        ],
    },
)
