components/script/xpath/snapshots/script__xpath__parser__tests__filter_expr@concat.snap
---
source: components/script/xpath/parser.rs
description: "concat('hello', ' ', 'world')"
expression: output
snapshot_kind: text
---
Path(
    PathExpr {
        is_absolute: false,
        is_descendant: false,
        steps: [
            Filter(
                FilterExpr {
                    primary: Function(
                        Concat(
                            [
                                Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Filter(
                                                FilterExpr {
                                                    primary: Literal(
                                                        String(
                                                            "hello",
                                                        ),
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Filter(
                                                FilterExpr {
                                                    primary: Literal(
                                                        String(
                                                            " ",
                                                        ),
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                Path(
                                    PathExpr {
                                        is_absolute: false,
                                        is_descendant: false,
                                        steps: [
                                            Filter(
                                                FilterExpr {
                                                    primary: Literal(
                                                        String(
                                                            "world",
                                                        ),
                                                    ),
                                                    predicates: PredicateListExpr {
                                                        predicates: [],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        ),
                    ),
                    predicates: PredicateListExpr {
                        predicates: [],
                    },
                },
            ),
        ],
    },
)
