components/script/xpath/snapshots/script__xpath__parser__tests__filter_expr@position.snap
---
source: components/script/xpath/parser.rs
description: position()
expression: output
snapshot_kind: text
---
Path(
    PathExpr {
        is_absolute: false,
        is_descendant: false,
        steps: [
            Filter(
                FilterExpr {
                    primary: Function(
                        Position,
                    ),
                    predicates: PredicateListExpr {
                        predicates: [],
                    },
                },
            ),
        ],
    },
)
